# Computer-Vision-With-Cpp

./: .gitignore  04-ControlFlow.cpp  06-Vectors.cpp  07-Functions.cpp  README.md
00 - Setup/: --General Notes.md  00-Setup Cmake.md  00-Setup VSCode.md  01.1-VCPKG.md  01.2-Conan.md  02-Build OpenCV from source.md  notes.md  todo  vsCode-Setup.md
00 - Setup/00-BuildSystem/02-Containerized/Opencv_CUDA_Docker/Test/: CMakeLists.txt
01-CPP/: 01-Hello.cpp  02-Variables.cpp  03-DataTypes.cpp  04-ControlFlow.cpp  04-Strings.cpp  05-Math.cpp  06-Arrays.cpp  06-Vectors.cpp  07-Functions.cpp  08-Memory.cpp  09-OOP.cpp  0xx-VectorsAndArrays.cpp  10-Structs.cpp  11-constexpr.cpp  12-Namespaces.cpp  13.1-Pointers.cpp  13.2-Pointers.cpp  13.3-Pointer_arithmetic.cpp  14-Optimization.cpp  14.1-OOP_1.cpp  2.5-Local_Scope.cpp  Makefile  O.1-Bit_Manipulation.cpp  run_all_examples.sh  xx-Pointers.cpp
02 - Eigen/: 00-Eigen_Basics.cpp  01-Eigen_Arithmetic.cpp  02-Eigen_Access.cpp  03-Eigen_Advanced.cpp  04-Eigen_ImageTransform.cpp  Makefile  notes.md  run_all_examples.sh
02-Installing OpenCV C++/: CMakeLists.txt  main.cpp  notes.md
03 - Torch/: 00-Torch_Basics.cpp  01-Torch_Image_Load.cpp  02-Torch_Tensor_Manipulation.cpp  03-Torch_Image_Normalization.cpp  04-Torch_Augmentation.cpp  10-Torch_Model_Inference.cpp  11-Torch_Shape_Debug.cpp  12-Torch_Train_CNN.cpp  13-Torch_Train_CNN_MNIST.cpp  14-Torch_Advanced_Training.cpp  14-Torch_CUDA_Device_Management.cpp  20-Torch_Use_TorchVision.cpp  21-Torch_Custom_Dataset.cpp  30-Torch_Transfer_Learning.cpp  31-TorchScript_ServerAPI.cpp  (+5 more)
(+134 files in other folders)
